[gd_scene load_steps=3 format=1]

[ext_resource path="res://themes/Default.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/MediaFolderSelectScreen.gd" type="Script" id=2]

[node name="MediaFolderSelectScreen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 984.0
margin/bottom = 560.0
script/script = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1020.0
margin/bottom = 28.0
text = "SELECT_MEDIA_FOLDERS"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OldLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 230.0
margin/top = 220.0
margin/right = 270.0
margin/bottom = 260.0
text = "OLD"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OldMediaFolder" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 220.0
margin/right = 750.0
margin/bottom = 258.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="OldMediaFolderButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 760.0
margin/top = 220.0
margin/right = 844.0
margin/bottom = 254.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "CHOOSE"
flat = false

[node name="NewLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 230.0
margin/top = 260.0
margin/right = 270.0
margin/bottom = 300.0
text = "NEW"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NewMediaFolder" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 260.0
margin/right = 750.0
margin/bottom = 298.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="NewMediaFolderButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 760.0
margin/top = 260.0
margin/right = 844.0
margin/bottom = 294.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "CHOOSE"
flat = false

[node name="NextButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 480.0
margin/top = 520.0
margin/right = 540.0
margin/bottom = 554.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "NEXT"
flat = false

[node name="OldMediaFolderDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 40.0
margin/right = 1000.0
margin/bottom = 580.0
popup/exclusive = false
window/title = "OLD_MEDIA_FOLDER"
dialog/hide_on_ok = false
mode = 2
access = 2
filters = StringArray(  )
show_hidden_files = false

[node name="NewMediaFolderDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 40.0
margin/right = 1000.0
margin/bottom = 580.0
popup/exclusive = false
window/title = "NEW_MEDIA_FOLDER"
dialog/hide_on_ok = false
mode = 2
access = 2
filters = StringArray(  )
show_hidden_files = false

[connection signal="pressed" from="OldMediaFolderButton" to="." method="_on_OldMediaFolderButton_pressed"]

[connection signal="pressed" from="NewMediaFolderButton" to="." method="_on_NewMediaFolderButton_pressed"]

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]

[connection signal="dir_selected" from="OldMediaFolderDialog" to="." method="_on_OldMediaFolderDialog_dir_selected"]

[connection signal="dir_selected" from="NewMediaFolderDialog" to="." method="_on_NewMediaFolderDialog_dir_selected"]


